added user router

--- a/Backend/.env
+++ b/Backend/.env
@@ -8,3 +8,9 @@ accestoken=ya29.a0AVvZVsobUOPzxTMbywIzWnQbNyzcX6bJK3ww9ubalHBXvyjA6_JFGY-82JtjAO
 
 email=dochair1234@gmail.com		
 password= DocHair@4321
+
+redish_host=redis-14860.c93.us-east-1-3.ec2.cloud.redislabs.com
+redish_password=hNRsrqnjSlwZmktH3qESjlpPmvgk2f2R
+
+mongo_url=mongodb+srv://dochair1234:dochair@cluster0.iqtrl9q.mongodb.net/Salon?retryWrites=true&w=majority
+
