--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,7 +9,10 @@
     "mongodb": "^5.0.1",
     "mongoose": "^6.9.2",
     "nodemailer": "^6.9.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
+    "uuid": "^9.0.0"
   },
   "name": "backend",
   "version": "1.0.0",
