--- a/Backend/package.json
+++ b/Backend/package.json
@@ -8,6 +8,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.0.1",
     "mongoose": "^6.9.2",
+    "node-fetch": "^3.3.0",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
