--- a/Backend/package.json
+++ b/Backend/package.json
@@ -22,6 +22,7 @@
   "scripts": {
     "server": "nodemon index.js",
     "start" : "nodemon indextest.js",
+    "admin" : "nodemon admin.check.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
