--- a/Frontend/hairdoc/package.json
+++ b/Frontend/hairdoc/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^4.1.17",
     "react": "^18.2.0",
+    "react-date-picker": "^9.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
